--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
+anyio==3.6.2
 astroid==2.12.12
 autopep8==2.0.0
 certifi==2022.9.24
 charset-normalizer==2.1.1
+click==8.1.3
 dill==0.3.6
 docutils==0.19
 et-xmlfile==1.1.0
+fastapi==0.87.0
+h11==0.14.0
+httptools==0.5.0
 idna==3.4
 isort==5.10.1
 Kivy==2.1.0
@@ -19,14 +24,24 @@ Pillow==9.3.0
 platformdirs==2.5.2
 plyer==2.0.0
 pycodestyle==2.9.1
+pydantic==1.10.2
 Pygments==2.13.0
 pylint==2.15.5
 PyMuPDF==1.20.2
 python-dateutil==2.8.2
+python-dotenv==0.21.0
 pytz==2022.6
+PyYAML==6.0
 requests==2.28.1
 six==1.16.0
+sniffio==1.3.0
+starlette==0.21.0
 tomli==2.0.1
 tomlkit==0.11.6
+typing_extensions==4.4.0
 urllib3==1.26.12
+uvicorn==0.19.0
+uvloop==0.17.0
+watchfiles==0.18.1
+websockets==10.4
 wrapt==1.14.1
